[package]
name = "breadferris"
version = "0.1.0"
authors = ["fn79"]
license = "MIT"
edition = "2018"

[dependencies]
reqwest = "*"
tempdir = "*"
image = "*"
json = "*"
chrono = "*"
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release] # 릴리즈 빌드
opt-level = 3

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
