[package]
name = "breadferris"
version = "0.1.0"
authors = ["fn79 <github.com/fn79>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/reffis/breadferris"
description = "Rust Discord Bot - 러스트로 작성된 디스코드 봇입니다."

[dependencies]
reqwest = "0.11"
json = "0.12.4"
chrono = "0.4"
rand = "0.8"
bbangcat_encryption = "0.1.1"

[profile.dev]
opt-level = 0

[profile.release] # 릴리즈 빌드
opt-level = 3

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
